fix previous tests and add integration test

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation platform('org.testcontainers:testcontainers-bom:1.17.6') //import bom
+    testImplementation('org.testcontainers:postgresql:1.15.3')
+    testImplementation('org.testcontainers:junit-jupiter:1.17.6')
 }
 
 tasks.named('test') {
