--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
     implementation 'org.flywaydb:flyway-core'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
@@ -30,7 +32,9 @@ dependencies {
     testImplementation('org.testcontainers:postgresql:1.15.3')
     testImplementation('org.testcontainers:junit-jupiter:1.17.6')
 }
-
+tasks.named('compileJava') {
+    inputs.files(tasks.named('processResources'))
+}
 tasks.named('test') {
     useJUnitPlatform()
 }
