--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ dependencies {
     implementation platform('org.testcontainers:testcontainers-bom:1.17.6') //import bom
     testImplementation('org.testcontainers:postgresql:1.15.3')
     testImplementation('org.testcontainers:junit-jupiter:1.17.6')
+//    implementation 'com.itextpdf:itextpdf:5.5.13.2'
+//    implementation 'com.github.librepdf:openpdf:1.3.26'
+    implementation 'com.itextpdf:itextpdf:5.5.13.3'
+
+
+
 }
 tasks.named('compileJava') {
     inputs.files(tasks.named('processResources'))
